fix: Extra spacing issue with select control after heading control

--- a/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
@@ -174,6 +174,9 @@
 .customize-control-ast-color.customize-control {
     margin-top: 32px;
 }
+.customize-control-ast-heading + .customize-control-ast-color {
+    margin-top: 20px;
+}
 .customize-control-ast-color.customize-control > * {
     display: inline;
 }
